# bit-digger

./: Cargo.toml  README.md
examples/: from-txt-folder.rs
src/: lib.rs  matcher.rs  mnem_fetch.rs
