[package]
name = "bit-digger"
version = "0.1.2"
edition = "2024"
authors = ["Juan Calzada"]

description = "A simple, and fast Rust library to look for Bitcoin hidden in arrays of words"
readme = "README.md"
license = "MIT"
repository = "https://github.com/juancabe/bit-digger"
documentation = "https://docs.rs/bit-digger"

[dependencies]
ahash = "0.8.11"
bip39 = "2.1.0"
bitcoin = "0.32.5"
thiserror = "2.0.12"

[dev-dependencies]
walkdir = "2.5.0"
